<resources>
    <string name="app_name_release">가계부</string>
    <string name="app_name_debug">가계부 디버그</string>

    <!-- 기초 -->
    <string name="retry">새로고침</string>
    <string name="main_back_pressed">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>

    <!-- 탭 -->
    <string name="str_list">리스트</string>
    <string name="str_calendar">달력</string>
    <string name="str_chart">분석</string>

    <!-- 메뉴 -->
    <string name="str_add_expense">가계부 작성</string>
    <string name="str_menu">메뉴</string>
    <string name="str_setting">설정</string>
    <string name="str_login">로그인</string>
    <string name="str_category">항목관리</string>

    <!-- 아이템 -->
    <string name="str_item_date">날짜</string>
    <string name="str_item_money">금액</string>
    <string name="str_item_expense_type">유형</string>
    <string name="str_item_expense_use">소비</string>
    <string name="str_item_expense_save">입금</string>
    <string name="str_item_category">항목</string>
    <string name="str_item_address">소비 위치</string>
    <string name="str_item_memo">메모</string>

    <!-- 리스트 -->
    <string name="str_memo">메모</string>

    <!-- 가계부 작성 -->
    <string name="str_add_date_tile">날짜를 입력 하세요.</string>
    <string name="str_add_expense_complete">%1$s내역 작성이 완료 되었습니다.</string>

    <!-- 결과 없음 -->
    <string name="no_history_account">아직 작성한 내역이 없습니다.</string>
    <string name="no_history_error">목록을 불러오는 동안 오류가 발생하였습니다.\n화면을 아래로 내려 새로고침 해주세요.</string>

    <!-- 에러 -->
    <string name="str_load_state_error">목록을 가져오는데 실패했습니다.\n잠시 후 다시 시도해 주세요.</string>
</resources>