<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/mainMenuGroup">
        <item
            android:id="@+id/action_add_expense"
            android:title="@string/str_add_expense"
            android:icon="@drawable/baseline_add_circle_black_18"
            android:enabled="true"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/action_menu"
            android:icon="@drawable/baseline_menu_black_18"
            android:title="@string/str_menu"
            app:showAsAction="always">
            <menu>

                <item
                    android:id="@+id/action_setting"
                    android:title="@string/str_setting"
                    android:icon="@drawable/baseline_settings_black_18"
                    android:enabled="false"
                    app:showAsAction="collapseActionView">

                    <menu>
                        <item android:id="@+id/action_setting_aa"
                            android:icon="@mipmap/icon_logo_small"
                            android:orderInCategory="0"
                            android:title="테스트"
                            app:showAsAction="never"/>
                    </menu>
                </item>

                <item
                    android:id="@+id/action_category"
                    android:title="@string/str_category"
                    android:icon="@drawable/baseline_queue_black_18"
                    android:enabled="true"
                    app:showAsAction="collapseActionView"/>

                <item
                    android:id="@+id/action_logout"
                    android:title="@string/str_login"
                    android:icon="@drawable/baseline_logout_black_18"
                    android:enabled="false"
                    app:showAsAction="withText|never"/>
            </menu>
        </item>
    </group>
</menu>