<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/listFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_list_black_18"
        android:title="@string/str_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/calendarFragment"
        android:enabled="true"
        android:icon="@drawable/baseline_calendar_today_black_18"
        android:title="@string/str_calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/chartFragment"
        android:enabled="true"
        android:icon="@drawable/outline_bar_chart_black_18"
        android:title="@string/str_chart"
        app:showAsAction="ifRoom" />
</menu>